--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Toujours avoir sur soi un kit de survie qui permettrait de subvenir aux premiers
 
 Les conseils du film Zombieland (Ruben Fleischer 2009) sont aussi à prendre en considération...
 		</p>
-		<h3>Source : <a href="#">www.influencia.net</a>
+		<h3>Source : <a href="http://www.influencia.net/fr/actualites1/usa-redoutent-invasion-zombies,39,1741.html">Influencia.net</a>
 		<h3>
 	</div>
 
