--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 			Edito
 		</h2>
 		<p>
-			Lorem ipsum dolor sit amet consect etuer adipi scing elit sed diam nonummy nibh euismod tinunt ut laoreet dolore magna aliquam erat volut. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+			Voici l'Edito, je sais pas trop ce que c'est donc voila j'écris des trucs que vous allez lire en vous demandant qu'est ce qu'il écrit celui la, fin vous perdrez quand même du temps a lire donc c'est cool.
 		</p>
 		<p>
-			Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+			Blague de la semaine : un clavier azerty en vaut deux.
 		</p>
 		
 	</div>
@@ -59,7 +59,7 @@ Toujours avoir sur soi un kit de survie qui permettrait de subvenir aux premiers
 </br>
 + Objets de survies : couteau, rouleau de Scotch, radio, torche, etc.
 </br>
-+ Produits sanitaire et d’hygiène: javel, savon, serviette, etc.
++ Produits sanitaire et d’hygiène: javel, savon, serviette, PQ !!! etc.
 </br>
 + Vêtements et couvertures
 </br>
